--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -10,7 +10,7 @@ Multiple types of approaches help improve the performance of NUMA systems. The f
 %However, these approaches are not architecture or OS independent, such as Carrefour~\cite{Dashti:2013:TMH:2451116.2451157}. More importantly, they cannot achieve the optimal performance due to \textbf{their reactive approaches} that only migrate a task or memory pages whenever contention. However, the migration  will require additional overhead. Also, some issues cannot be solved by the reactive approach. For instance,  
 
 
-Another type of approach focus on heap management~\cite{tcmallocnew, }, since the heap easily cause performance issue due to extensive allocations and deallocations and extensive accesses on these heap objects. The NUMA-aware memory management is appealing, because there is no need to change applications explicitly. For this task, it is essential to reduce the number of remote accesses. Kaminski et. al. designs a NUMA-aware memory management based on TcMalloc~\cite{tcmallocnew}, called as TcMalloc-NUMA in the remainder of this paper.TcMalloc-NUMA designs a node-aware memory management by tracking the memory locality information. It invokes the \texttt{mbind} system call to bind the memory explicitly, so that it could check the locality via the stored information inside the user space. Also, it could always return a freed object back to a corresponding node based on the locality information. However, TcMalloc-NUMA has multiple design issues that may affect its performance. First, it does not regulate the task assignment, which could potentially introduce significant overhead by querying the locality of tasks dynamically. Second, it does not consider the load balance issue, but only focusing on remote accesses. Third, it does not employ the recent progress of the hardware and OS support, such as huge pages, due to its development in 2012. 
+Another type of approach focus on heap management~\cite{tcmallocnew}, since the heap easily cause performance issue due to extensive allocations and deallocations and extensive accesses on these heap objects. The NUMA-aware memory management is appealing, because there is no need to change applications explicitly. For this task, it is essential to reduce the number of remote accesses. Kaminski et. al. designs a NUMA-aware memory management based on TcMalloc~\cite{tcmallocnew}, called as TcMalloc-NUMA in the remainder of this paper.TcMalloc-NUMA designs a node-aware memory management by tracking the memory locality information. It invokes the \texttt{mbind} system call to bind the memory explicitly, so that it could check the locality via the stored information inside the user space. Also, it could always return a freed object back to a corresponding node based on the locality information. However, TcMalloc-NUMA has multiple design issues that may affect its performance. First, it does not regulate the task assignment, which could potentially introduce significant overhead by querying the locality of tasks dynamically. Second, it does not consider the load balance issue, but only focusing on remote accesses. Third, it does not employ the recent progress of the hardware and OS support, such as huge pages, due to its development in 2012. 
 
 
 \begin{comment}
