--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -1672,6 +1672,22 @@ year = {2012}
   year = {2009}
 } 
 
+@inproceedings{Gay:1998:MME:277650.277748,
+author    = {David Gay and
+               Alexander Aiken},
+  title     = {Memory Management with Explicit Regions},
+  booktitle = {Proceedings of the {ACM} {SIGPLAN} '98 Conference on Programming Language
+               Design and Implementation (PLDI), Montreal, Canada, June 17-19, 1998},
+  pages     = {313--323},
+  year      = {1998},
+  crossref  = {DBLP:conf/pldi/1998},
+  url       = {https://doi.org/10.1145/277650.277748},
+  doi       = {10.1145/277650.277748},
+  timestamp = {Tue, 06 Nov 2018 16:59:30 +0100},
+  biburl    = {https://dblp.org/rec/conf/pldi/GayA98.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{Knauerhase:2008:UOO:1435611.1436101,
  author = {Knauerhase, Rob and Brett, Paul and Hohlt, Barbara and Li, Tong and Hahn, Scott},
  title = {Using OS Observations to Improve Performance in Multicore Systems},
