--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -36,7 +36,7 @@ This paper proposes a novel memory manage --\NM{}--to address these issues. Firs
 
 %There are other implementation issues that may also contribute to the performance improvement. For instance, the metadata will be always allocated locally. The big objects will be re-utilized by small objects automatically, in order to reduce the potential cache misses. 
 
-To evaluate \NM{}, we perform extensive evaluation on synthetic and real applications, and compare \NM{} with popular allocators, such as the default Linux allocator, TcMalloc~\cite{tcmalloc}, jemalloc~\cite{jemalloc}, Intel TBB~\cite{tbb}, and Scalloc~\cite{Scalloc}. For the performance on real applications, \NM{} achieves around 13\% speedup on average comparing to the default Linux allocator, which is also 11\% faster than the second best one. For the \texttt{fluidanimate} application, \NM{} achieves up to $5.8\times$ faster than the default allocator, and $4.7\times$ faster than the second best one. For synthetic applications, \NM{} is running 44\% faster than the second best one in an 2-node machine, and is around $3\times$ faster than the second best one in an 8-node machine.  In total, \NM{} may impose around \todo{XX} memory overhead, but is much more scalable than all other allocators.  \NM{} is ready for the practical employment, due to its high performance, and good scalability. 
+To evaluate \NM{}, we perform extensive evaluation on synthetic and real applications, and compare \NM{} with popular allocators, such as the default Linux allocator, TcMalloc~\cite{tcmalloc}, jemalloc~\cite{jemalloc}, Intel TBB~\cite{tbb}, and Scalloc~\cite{Scalloc}. For the performance on real applications, \NM{} achieves around 13\% speedup on average comparing to the default Linux allocator, which is also 11\% faster than the second best one. For the \texttt{fluidanimate} application, \NM{} achieves up to $5.8\times$ faster than the default allocator, and $4.7\times$ faster than the second best one. For synthetic applications, \NM{} is running 44\% faster than the second best one in an 2-node machine, and is around $3\times$ faster than the second best one in an 8-node machine.  In total, \NM{} may impose around 23\% memory overhead, but is much more scalable than all other allocators.  \NM{} is ready for the practical employment, due to its high performance, and good scalability. 
 
 Overall, this paper has the following contributions. 
 
@@ -88,7 +88,7 @@ RTDSCP is a way to know where a thread is executed on.
 
 %https://software.intel.com/en-us/forums/intel-isa-extensions/topic/280440
 
-\todo{Should we put the metadata into the corresponding node? We will minimize the lock uses for each node, since that will invoke unnecessary remote accesses as well. }
+Should we put the metadata into the corresponding node? We will minimize the lock uses for each node, since that will invoke unnecessary remote accesses as well. 
 
 
 % From Score: SCOREs runtime system will include a memory manager instrumented to track object ownership with low overhead by leveraging existing thread-local allocation buffers and using per-processor memory pools. The runtime system will sample memory access patterns to detect when memory should be relocated to or initially placed in memory closer to a specific processor
