--- a/paper/implementation.tex
+++ b/paper/implementation.tex
@@ -145,13 +145,14 @@ In order to avoid the bottleneck of the per-node heap, \NM{} introduces a circul
  
 
 \subsection{Other Mechanisms}
+\label{sec: others}
 
 \paragraph{Node-Local Metadata:} \NM{} guarantees that all of the metadata is always allocated in the same node, based on its task binding as described in Section~\ref{sec:taskassign}. Such metadata includes per-node and per-thread freelists for different size classes, and freelists for big objects. Similarly, \NM{} utilizes the \texttt{mbind} system call to bind the memory to a specific node.  
 
 \paragraph{Memory Reutilization:} Some applications may create new threads after some threads have exited. \NM{} re-utilizes the memory for these exited threads. Basically, \NM{} introduces a thread index for each thread, which is utilized to index the corresponding per-thread heap.  \NM{} intercepts thread joins and cancels so that it can assign the indexes of exited threads for newly-created threads, and re-utilize their heaps correspondingly.  
 
 
-\paragraph{Reducing Memory Consumption:} During the development, we noticed that excessive memory consumption can be imposed when the OS enables transparent huge pages by default. In order to reduce memory consumption, \NM{} makes multiple threads share the same bag for the same size class, instead of having a separate bag for each thread. Each thread will get a number of objects from the  bag, if it runs out of the memory for a size class. Currently, if a class size is less than one page, then we will at most get objects with the total size of one normal page. Otherwise, it will get 4 objects (with the size less than 64 KB) or 2 objects afterwards.  
+\paragraph{Transparent Huge Page Support:} During the development, we noticed that excessive memory consumption can be imposed when the OS enables transparent huge pages by default. In order to reduce memory consumption, \NM{} makes multiple threads share the same bag for the same size class, instead of having a separate bag for each thread. Each thread will get a number of objects from the bag, if it runs out of the memory for a size class. Currently, if a class size is less than one page, then we will at most get objects with the total size of one normal page. Otherwise, it will get 4 objects (with the size less than 64 KB) or 2 objects afterwards.  
 
 %we propose the combination of per-node heap and per-thread cache. In order to reduce the contention, \NM{} will obtain multiple objects at a time from the per-node heap. 
 
