Add some changes

--- a/paper/evaluation.tex
+++ b/paper/evaluation.tex
@@ -17,7 +17,7 @@ This section aims to answer the following research questions:
  \centering
   \footnotesize
   \setlength{\tabcolsep}{1.0em}
-\begin{tabular}{c c c}
+\begin{tabular}{c | c | c}
 \hline
 System & \textbf{Machine A} & \textbf{Machine B} \\ \hline
 CPUs/Model & Xeon Gold 6138	& Xeon(R) Platinum 8153\\ \hline
